<resources>
    <string name="app_name">Quantam It Assignment</string>
    <string name="register_now"><u>Register Now</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="google_sign_in_button">Google Sign In Button</string>
    <string name="or">or</string>
    <string name="facebook_sign_in_button">Facebook Sign In Button</string>
    <string name="login_with">Login with</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_icon">Password icon</string>
    <string name="password_hint">***********</string>
    <string name="password">Password</string>
    <string name="user_icon">User Icon</string>
    <string name="email_hint">johndoe123@gmail.com</string>
    <string name="email_id">Email Id</string>
    <string name="account">Account</string>
    <string name="sign_in_to_your">Sign in to your</string>
    <string name="sign_up">Sign Up</string>
    <string name="x">X</string>
    <string name="social">Social</string>
    <string name="create_an">Create an</string>
    <string name="name">Name</string>
    <string name="john_doe">John Doe</string>
    <string name="terms_condition"><u>terms &amp; condition</u></string>
    <string name="sign_in_special">Sign In!</string>
    <string name="_1234567890">1234567890</string>
    <string name="contact_no">Contact no.</string>
    <string name="i_agree_to">I agree to</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search…</string>
    <string name="search_logo">Search logo</string>
    <string name="category_icon">Category Icon</string>
    <string name="deals_image">Deals Image</string>
    <string name="best_sellers">BEST SELLERS</string>
    <string name="back_to_the_city">BACK TO THE CITY</string>
    <string name="product_catalogue">Product Catalogue</string>
    <string name="up_to">Up to</string>
    <string name="off">% off</string>
    <string name="clothing_and_shoes">CLOTHING AND SHOES</string>
    <string name="flash_deals">FLASH DEALS</string>
    <string name="discount_you_can_t_resist">Discount you can\'t resist!</string>

    <string name="facebook_app_id">661040938412010</string>
    <string name="fb_login_protocol_scheme">fb661040938412010</string>
</resources>